tutorial/ingress/whoami-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-service
  namespace: whoami
spec:
  selector:
    app.kubernetes.io/name: whoami-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
